--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="">Gallery</a></li>
         <li><a href="">Contact</a></li>
         <li><a href="">Portfolio</a></li>
+        <h1>haroon</h1>
     </ul>
 
     <ul class="social-links">
